--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,11 @@
+html { 
+  background: url(background.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 #container {
 	margin-top: 20px;
 	margin-left: 200px;
