--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,7 +14,7 @@ html {
 	padding: 10px 150px 10px 150px;
 
 	border-radius: 15px;
-	background-color: #C4CECD;
+	background-color: rgba(0,0,0,0.7);
 
 	text-align: left;
 }
